Closed
Bug 1421965
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::MediaPipeline::MediaPipeline
Categories
(Core :: WebRTC: Signaling, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | unaffected |
| firefox59 | + | verified |
People
(Reporter: calixte, Assigned: bwc)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-de255c5b-9266-4254-88b1-2e1170171130.
=============================================================
Top 10 frames of crashing thread:
0 xul.dll mozilla::MediaPipeline::MediaPipeline media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp:591
1 xul.dll mozilla::MediaPipelineReceive::MediaPipelineReceive media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp:1997
2 xul.dll mozilla::MediaPipelineReceiveAudio::MediaPipelineReceiveAudio media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp:2130
3 xul.dll mozilla::TransceiverImpl::InitAudio media/webrtc/signaling/src/peerconnection/TransceiverImpl.cpp:81
4 xul.dll mozilla::TransceiverImpl::TransceiverImpl media/webrtc/signaling/src/peerconnection/TransceiverImpl.cpp:56
5 xul.dll mozilla::PeerConnectionMedia::AddTransceiver media/webrtc/signaling/src/peerconnection/PeerConnectionMedia.cpp:1148
6 xul.dll mozilla::PeerConnectionImpl::CreateTransceiverImpl media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp:1224
7 xul.dll mozilla::PeerConnectionImpl::CreateTransceiverImpl media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp:1252
8 xul.dll mozilla::dom::PeerConnectionImplBinding::createTransceiverImpl dom/bindings/PeerConnectionImplBinding.cpp:380
9 xul.dll mozilla::dom::GenericBindingMethod dom/bindings/BindingUtils.cpp:3042
=============================================================
There are 21 crashes in nightly 59 starting with buildid 20171129111030. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1290948.
[1] https://hg.mozilla.org/mozilla-central/rev/ab0fc6ccf118
Flags: needinfo?(docfaraday)
| Assignee | ||
Comment 1•8 years ago
|
||
This would be bug 1418367 rearing its ugly head. Bug 1397793 should fix this, and looks very close to ready to land. I could prevent it from crashing when this happens, though.
Updated•8 years ago
|
Rank: 15
Priority: -- → P2
Comment 2•8 years ago
|
||
Looking at the crash stack don't you think we should handle failures to create a audio or video conduit more gracefully then we do right now?
Sorry if this is what you were asking for regarding a workaround for bug 1397793 before landing transceivers. I think in the long run it would be helpful not to crash when audio/video conduit init failed.
Rank: 15 → 5
Priority: P2 → P1
Comment 3•8 years ago
|
||
[Tracking Requested - why for this release]:
This is the #4 Windows topcrash in Nightly 20171201100115.
tracking-firefox59:
--- → ?
| Assignee | ||
Comment 4•8 years ago
|
||
(In reply to Nils Ohlmeier [:drno] from comment #2)
> Looking at the crash stack don't you think we should handle failures to
> create a audio or video conduit more gracefully then we do right now?
>
> Sorry if this is what you were asking for regarding a workaround for bug
> 1397793 before landing transceivers. I think in the long run it would be
> helpful not to crash when audio/video conduit init failed.
The only reason we ever noticed this problem is because of the crash, so I'm a little conflicted on this. I wish there was a "make this show up in crash-stats, but don't crash the browser" thing we could do here.
Flags: needinfo?(docfaraday)
| Comment hidden (mozreview-request) |
Comment 6•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8934258 [details]
Bug 1421965: Avoid nullptr crash when conduits cannot be created.
https://reviewboard.mozilla.org/r/205178/#review210712
LGTM
Attachment #8934258 -
Flags: review?(drno) → review+
Updated•8 years ago
|
Assignee: nobody → docfaraday
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/178376765b9e
Avoid nullptr crash when conduits cannot be created. r=drno
Comment 8•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
| Reporter | ||
Comment 9•8 years ago
|
||
No more crashes in nightly 59 since the patch landed.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•