Bug 1421965: Avoid nullptr crash when conduits cannot be created. r=drno

MozReview-Commit-ID: AdWiIbpFP0Y